--- a/index.html
+++ b/index.html
@@ -15,14 +15,12 @@
 
     <link data-trunk rel="copy-file" href="assets/sw.js" />
     <link data-trunk rel="copy-file" href="assets/manifest.json" />
-    <link data-trunk rel="copy-file" href="assets/icon-1024.png" data-target-path="assets" />
-    <link data-trunk rel="copy-file" href="assets/icon-256.png" data-target-path="assets" />
-    <link data-trunk rel="copy-file" href="assets/icon_ios_touch_192.png" data-target-path="assets" />
-    <link data-trunk rel="copy-file" href="assets/maskable_icon_x512.png" data-target-path="assets" />
-
+    <link data-trunk rel="copy-file" href="assets/icon-192x192.png" data-target-path="assets" />
+    <link data-trunk rel="copy-file" href="assets/icon-512x512.png" data-target-path="assets" />
+    <link data-trunk rel="copy-file" href="assets/icon.png" data-target-path="assets" />
 
     <link rel="manifest" href="manifest.json">
-    <link rel="apple-touch-icon" href="assets/icon_ios_touch_192.png">
+    <link rel="apple-touch-icon" href="assets/icon-192x192.png">
     <meta name="theme-color" media="(prefers-color-scheme: light)" content="white">
     <meta name="theme-color" media="(prefers-color-scheme: dark)" content="#404040">
 
