chore: icons fix again & refactoring, ui zoom to 1.3

--- a/index.html
+++ b/index.html
@@ -15,12 +15,12 @@
 
     <link data-trunk rel="copy-file" href="assets/sw.js" />
     <link data-trunk rel="copy-file" href="assets/manifest.json" />
-    <link data-trunk rel="copy-file" href="assets/icon-192x192.png" data-target-path="assets" />
-    <link data-trunk rel="copy-file" href="assets/icon-512x512.png" data-target-path="assets" />
+    <link data-trunk rel="copy-file" href="assets/icon-192.png" data-target-path="assets" />
+    <link data-trunk rel="copy-file" href="assets/icon-512.png" data-target-path="assets" />
     <link data-trunk rel="copy-file" href="assets/icon.png" data-target-path="assets" />
 
     <link rel="manifest" href="manifest.json">
-    <link rel="apple-touch-icon" href="assets/icon-192x192.png">
+    <link rel="apple-touch-icon" href="assets/icon-192.png">
     <meta name="theme-color" media="(prefers-color-scheme: light)" content="#eff1f5">
     <meta name="theme-color" media="(prefers-color-scheme: dark)" content="#303446">
 
